libqt6c/src/libqpaintengine.hpp

typedef struct QFont QFont;
typedef struct QImage QImage;
typedef struct QLine QLine;
typedef struct QLineF QLineF;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPaintEngine QPaintEngine;
typedef struct QPaintEngineState QPaintEngineState;
typedef struct QPainter QPainter;
typedef struct QPainterPath QPainterPath;
typedef struct QPixmap QPixmap;
typedef struct QPoint QPoint;
typedef struct QPointF QPointF;
typedef struct QRect QRect;
typedef struct QRectF QRectF;
typedef struct QRegion QRegion;
typedef struct QSize QSize;
typedef struct QTextItem QTextItem;
QTextItem* QTextItem_new(const QTextItem* other);
QTextItem* QTextItem_new2(QTextItem* other);
double QTextItem_Descent(const QTextItem* self);
double QTextItem_Ascent(const QTextItem* self);
double QTextItem_Width(const QTextItem* self);
int QTextItem_RenderFlags(const QTextItem* self);
libqt_string QTextItem_Text(const QTextItem* self);
QFont* QTextItem_Font(const QTextItem* self);
void QTextItem_Delete(QTextItem* self);
QPaintEngine* QPaintEngine_new();
QPaintEngine* QPaintEngine_new2(int features);
bool QPaintEngine_IsActive(const QPaintEngine* self);
void QPaintEngine_SetActive(QPaintEngine* self, bool newState);
bool QPaintEngine_Begin(QPaintEngine* self, QPaintDevice* pdev);
bool QPaintEngine_End(QPaintEngine* self);
void QPaintEngine_UpdateState(QPaintEngine* self, const QPaintEngineState* state);
void QPaintEngine_DrawRects(QPaintEngine* self, const QRect* rects, int rectCount);
void QPaintEngine_DrawRects2(QPaintEngine* self, const QRectF* rects, int rectCount);
void QPaintEngine_DrawLines(QPaintEngine* self, const QLine* lines, int lineCount);
void QPaintEngine_DrawLines2(QPaintEngine* self, const QLineF* lines, int lineCount);
void QPaintEngine_DrawEllipse(QPaintEngine* self, const QRectF* r);
void QPaintEngine_DrawEllipse2(QPaintEngine* self, const QRect* r);
void QPaintEngine_DrawPath(QPaintEngine* self, const QPainterPath* path);
void QPaintEngine_DrawPoints(QPaintEngine* self, const QPointF* points, int pointCount);
void QPaintEngine_DrawPoints2(QPaintEngine* self, const QPoint* points, int pointCount);
void QPaintEngine_DrawPolygon(QPaintEngine* self, const QPointF* points, int pointCount, int mode);
void QPaintEngine_DrawPolygon2(QPaintEngine* self, const QPoint* points, int pointCount, int mode);
void QPaintEngine_DrawPixmap(QPaintEngine* self, const QRectF* r, const QPixmap* pm, const QRectF* sr);
void QPaintEngine_DrawTextItem(QPaintEngine* self, const QPointF* p, const QTextItem* textItem);
void QPaintEngine_DrawTiledPixmap(QPaintEngine* self, const QRectF* r, const QPixmap* pixmap, const QPointF* s);
void QPaintEngine_DrawImage(QPaintEngine* self, const QRectF* r, const QImage* pm, const QRectF* sr, int flags);
void QPaintEngine_SetPaintDevice(QPaintEngine* self, QPaintDevice* device);
QPaintDevice* QPaintEngine_PaintDevice(const QPaintEngine* self);
void QPaintEngine_SetSystemClip(QPaintEngine* self, const QRegion* baseClip);
QRegion* QPaintEngine_SystemClip(const QPaintEngine* self);
void QPaintEngine_SetSystemRect(QPaintEngine* self, const QRect* rect);
QRect* QPaintEngine_SystemRect(const QPaintEngine* self);
QPoint* QPaintEngine_CoordinateOffset(const QPaintEngine* self);
int QPaintEngine_Type(const QPaintEngine* self);
bool QPaintEngine_TestDirty(QPaintEngine* self, int df);
void QPaintEngine_SetDirty(QPaintEngine* self, int df);
void QPaintEngine_ClearDirty(QPaintEngine* self, int df);
bool QPaintEngine_HasFeature(const QPaintEngine* self, int feature);
QPainter* QPaintEngine_Painter(const QPaintEngine* self);
void QPaintEngine_SyncState(QPaintEngine* self);
bool QPaintEngine_IsExtended(const QPaintEngine* self);
QPixmap* QPaintEngine_CreatePixmap(QPaintEngine* self, QSize* size);
QPixmap* QPaintEngine_CreatePixmapFromImage(QPaintEngine* self, QImage* image, int flags);
void QPaintEngine_Delete(QPaintEngine* self);