QtBeef/src/Qt/qpaintengine.bf

using System;
using System.Interop;

namespace Qt6;

// --------------------------------------------------------------
// QTextItem
// --------------------------------------------------------------
[CRepr]
struct QTextItem_Ptr
{
	public void* Ptr;
	public this(void* ptr)
	{
		this.Ptr = ptr;
	}
}
extension CQt
{
	[LinkName("QTextItem_new")]
	public static extern QTextItem_Ptr QTextItem_new(void** other);
	[LinkName("QTextItem_new2")]
	public static extern QTextItem_Ptr QTextItem_new2(void** other);
	[LinkName("QTextItem_Delete")]
	public static extern void QTextItem_Delete(QTextItem_Ptr self);
	[LinkName("QTextItem_Descent")]
	public static extern double QTextItem_Descent(void* self);
	[LinkName("QTextItem_Ascent")]
	public static extern double QTextItem_Ascent(void* self);
	[LinkName("QTextItem_Width")]
	public static extern double QTextItem_Width(void* self);
	[LinkName("QTextItem_RenderFlags")]
	public static extern void* QTextItem_RenderFlags(void* self);
	[LinkName("QTextItem_Text")]
	public static extern libqt_string QTextItem_Text(void* self);
	[LinkName("QTextItem_Font")]
	public static extern void* QTextItem_Font(void* self);
}
class QTextItem : IQTextItem
{
	private QTextItem_Ptr ptr;
	public void* ObjectPtr => ptr.Ptr;
	public this(QTextItem_Ptr ptr)
	{
		this.ptr = ptr;
	}
	public this(IQTextItem other)
	{
		this.ptr = CQt.QTextItem_new((.)other?.ObjectPtr);
	}
	public ~this()
	{
		CQt.QTextItem_Delete(this.ptr);
	}
	public double Descent()
	{
		return CQt.QTextItem_Descent((.)this.ptr.Ptr);
	}
	public double Ascent()
	{
		return CQt.QTextItem_Ascent((.)this.ptr.Ptr);
	}
	public double Width()
	{
		return CQt.QTextItem_Width((.)this.ptr.Ptr);
	}
	public void* RenderFlags()
	{
		return CQt.QTextItem_RenderFlags((.)this.ptr.Ptr);
	}
	public void Text(String outStr)
	{
		CQt.QTextItem_Text((.)this.ptr.Ptr);
	}
	public QFont_Ptr Font()
	{
		return QFont_Ptr(CQt.QTextItem_Font((.)this.ptr.Ptr));
	}
}
interface IQTextItem : IQtObjectInterface
{
}
// --------------------------------------------------------------
// QPaintEngine
// --------------------------------------------------------------
[CRepr]
struct QPaintEngine_Ptr
{
	public void* Ptr;
	public this(void* ptr)
	{
		this.Ptr = ptr;
	}
}
extension CQt
{
	[LinkName("QPaintEngine_new")]
	public static extern QPaintEngine_Ptr QPaintEngine_new();
	[LinkName("QPaintEngine_new2")]
	public static extern QPaintEngine_Ptr QPaintEngine_new2(void* features);
	[LinkName("QPaintEngine_Delete")]
	public static extern void QPaintEngine_Delete(QPaintEngine_Ptr self);
	[LinkName("QPaintEngine_IsActive")]
	public static extern bool QPaintEngine_IsActive(void* self);
	[LinkName("QPaintEngine_SetActive")]
	public static extern void QPaintEngine_SetActive(void* self, bool newState);
	[LinkName("QPaintEngine_Begin")]
	public static extern bool QPaintEngine_Begin(void* self, void** pdev);
	[LinkName("QPaintEngine_End")]
	public static extern bool QPaintEngine_End(void* self);
	[LinkName("QPaintEngine_UpdateState")]
	public static extern void QPaintEngine_UpdateState(void* self, void** state);
	[LinkName("QPaintEngine_DrawRects")]
	public static extern void QPaintEngine_DrawRects(void* self, void** rects, c_int rectCount);
	[LinkName("QPaintEngine_DrawRects2")]
	public static extern void QPaintEngine_DrawRects2(void* self, void** rects, c_int rectCount);
	[LinkName("QPaintEngine_DrawLines")]
	public static extern void QPaintEngine_DrawLines(void* self, void** lines, c_int lineCount);
	[LinkName("QPaintEngine_DrawLines2")]
	public static extern void QPaintEngine_DrawLines2(void* self, void** lines, c_int lineCount);
	[LinkName("QPaintEngine_DrawEllipse")]
	public static extern void QPaintEngine_DrawEllipse(void* self, void** r);
	[LinkName("QPaintEngine_DrawEllipse2")]
	public static extern void QPaintEngine_DrawEllipse2(void* self, void** r);
	[LinkName("QPaintEngine_DrawPath")]
	public static extern void QPaintEngine_DrawPath(void* self, void** path);
	[LinkName("QPaintEngine_DrawPoints")]
	public static extern void QPaintEngine_DrawPoints(void* self, void** points, c_int pointCount);
	[LinkName("QPaintEngine_DrawPoints2")]
	public static extern void QPaintEngine_DrawPoints2(void* self, void** points, c_int pointCount);
	[LinkName("QPaintEngine_DrawPolygon")]
	public static extern void QPaintEngine_DrawPolygon(void* self, void** points, c_int pointCount, QPaintEngine_PolygonDrawMode mode);
	[LinkName("QPaintEngine_DrawPolygon2")]
	public static extern void QPaintEngine_DrawPolygon2(void* self, void** points, c_int pointCount, QPaintEngine_PolygonDrawMode mode);
	[LinkName("QPaintEngine_DrawPixmap")]
	public static extern void QPaintEngine_DrawPixmap(void* self, void** r, void** pm, void** sr);
	[LinkName("QPaintEngine_DrawTextItem")]
	public static extern void QPaintEngine_DrawTextItem(void* self, void** p, void** textItem);
	[LinkName("QPaintEngine_DrawTiledPixmap")]
	public static extern void QPaintEngine_DrawTiledPixmap(void* self, void** r, void** pixmap, void** s);
	[LinkName("QPaintEngine_DrawImage")]
	public static extern void QPaintEngine_DrawImage(void* self, void** r, void** pm, void** sr, void* flags);
	[LinkName("QPaintEngine_SetPaintDevice")]
	public static extern void QPaintEngine_SetPaintDevice(void* self, void** device);
	[LinkName("QPaintEngine_PaintDevice")]
	public static extern void** QPaintEngine_PaintDevice(void* self);
	[LinkName("QPaintEngine_SetSystemClip")]
	public static extern void QPaintEngine_SetSystemClip(void* self, void** baseClip);
	[LinkName("QPaintEngine_SystemClip")]
	public static extern void* QPaintEngine_SystemClip(void* self);
	[LinkName("QPaintEngine_SetSystemRect")]
	public static extern void QPaintEngine_SetSystemRect(void* self, void** rect);
	[LinkName("QPaintEngine_SystemRect")]
	public static extern void* QPaintEngine_SystemRect(void* self);
	[LinkName("QPaintEngine_CoordinateOffset")]
	public static extern void* QPaintEngine_CoordinateOffset(void* self);
	[LinkName("QPaintEngine_Type")]
	public static extern QPaintEngine_Type QPaintEngine_Type(void* self);
	[LinkName("QPaintEngine_Fix_Neg_Rect")]
	public static extern void QPaintEngine_Fix_Neg_Rect(void* self, c_int* x, c_int* y, c_int* w, c_int* h);
	[LinkName("QPaintEngine_TestDirty")]
	public static extern bool QPaintEngine_TestDirty(void* self, void* df);
	[LinkName("QPaintEngine_SetDirty")]
	public static extern void QPaintEngine_SetDirty(void* self, void* df);
	[LinkName("QPaintEngine_ClearDirty")]
	public static extern void QPaintEngine_ClearDirty(void* self, void* df);
	[LinkName("QPaintEngine_HasFeature")]
	public static extern bool QPaintEngine_HasFeature(void* self, void* feature);
	[LinkName("QPaintEngine_Painter")]
	public static extern void** QPaintEngine_Painter(void* self);
	[LinkName("QPaintEngine_SyncState")]
	public static extern void QPaintEngine_SyncState(void* self);
	[LinkName("QPaintEngine_IsExtended")]
	public static extern bool QPaintEngine_IsExtended(void* self);
	[LinkName("QPaintEngine_CreatePixmap")]
	public static extern void* QPaintEngine_CreatePixmap(void* self, void* size);
	[LinkName("QPaintEngine_CreatePixmapFromImage")]
	public static extern void* QPaintEngine_CreatePixmapFromImage(void* self, void* image, void* flags);
}
